--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,7 @@ section {
     padding: 10px 50px;
     background-image: url(img/search-bg.png);
     background-position: center;
+    background-size: 90%;
     background-repeat: no-repeat;
 }
 
